[gd_scene load_steps=37 format=2]

[ext_resource path="res://ChildPlayer.gd" type="Script" id=1]
[ext_resource path="res://OnFootAssets/Village/ChildPlayerSpritesheet.png" type="Texture" id=2]
[ext_resource path="res://OnFootAssets/Player/PlayerUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://OnFootAssets/Hitboxes-Hurtboxes/SoftCollision.tscn" type="PackedScene" id=4]
[ext_resource path="res://OnFootAssets/DialogueSystem/DialogueInteractionArea.tscn" type="PackedScene" id=5]
[ext_resource path="res://OnFootAssets/DialogueSystem/DialogueLayer.tscn" type="PackedScene" id=6]
[ext_resource path="res://OnFootAssets/InteractionButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://Audio/Footsteps/grass_footsteps.wav" type="AudioStream" id=8]

[sub_resource type="Animation" id=1]
resource_name = "IdleDown"
length = 2.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.4, 1.5, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=2]
resource_name = "IdleLeft"
length = 2.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.4, 1.5, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 22, 23, 24, 25 ]
}

[sub_resource type="Animation" id=3]
resource_name = "IdleRight"
length = 2.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.4, 1.5, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 10, 11, 12, 13 ]
}

[sub_resource type="Animation" id=4]
resource_name = "IdleUp"
length = 2.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.4, 1.5, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 34, 35, 36, 37 ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 10 ]
}

[sub_resource type="Animation" id=6]
resource_name = "WalkDown"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 8, 9 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "play_footstep_sound"
}, {
"args": [  ],
"method": "play_footstep_sound"
} ]
}

[sub_resource type="Animation" id=7]
resource_name = "WalkLeft"
length = 0.6
loop = true
step = 0.075
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225, 0.3, 0.375, 0.45, 0.525 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 26, 27, 28, 29, 30, 31, 32, 33 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "play_footstep_sound"
}, {
"args": [  ],
"method": "play_footstep_sound"
} ]
}

[sub_resource type="Animation" id=8]
resource_name = "WalkRight"
length = 0.6
loop = true
step = 0.075
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225, 0.3, 0.375, 0.45, 0.525 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 16, 17, 18, 19, 20, 21 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "play_footstep_sound"
}, {
"args": [  ],
"method": "play_footstep_sound"
} ]
}

[sub_resource type="Animation" id=9]
resource_name = "WalkUp"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 38, 39, 40, 41, 42, 43 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "play_footstep_sound"
}, {
"args": [  ],
"method": "play_footstep_sound"
} ]
}

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "IdleLeft"

[sub_resource type="AnimationNodeAnimation" id=28]
animation = "IdleRight"

[sub_resource type="AnimationNodeAnimation" id=29]
animation = "IdleDown"

[sub_resource type="AnimationNodeAnimation" id=30]
animation = "IdleUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=31]
blend_point_0/node = SubResource( 27 )
blend_point_0/pos = Vector2( -1.1, 0 )
blend_point_1/node = SubResource( 28 )
blend_point_1/pos = Vector2( 1.1, 0 )
blend_point_2/node = SubResource( 29 )
blend_point_2/pos = Vector2( 0, 1 )
blend_point_3/node = SubResource( 30 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1.1, -1.1 )
max_space = Vector2( 1.1, 1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=32]
animation = "WalkLeft"

[sub_resource type="AnimationNodeAnimation" id=33]
animation = "WalkRight"

[sub_resource type="AnimationNodeAnimation" id=34]
animation = "WalkDown"

[sub_resource type="AnimationNodeAnimation" id=35]
animation = "WalkUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=36]
blend_point_0/node = SubResource( 32 )
blend_point_0/pos = Vector2( -1.1, 0 )
blend_point_1/node = SubResource( 33 )
blend_point_1/pos = Vector2( 1.1, 0 )
blend_point_2/node = SubResource( 34 )
blend_point_2/pos = Vector2( 0, 1 )
blend_point_3/node = SubResource( 35 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1.1, -1.1 )
max_space = Vector2( 1.1, 1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=37]

[sub_resource type="AnimationNodeStateMachineTransition" id=38]

[sub_resource type="AnimationNodeStateMachine" id=39]
states/Idle/node = SubResource( 31 )
states/Idle/position = Vector2( 251, 76 )
states/Walk/node = SubResource( 36 )
states/Walk/position = Vector2( 403, 76 )
transitions = [ "Idle", "Walk", SubResource( 37 ), "Walk", "Idle", SubResource( 38 ) ]
start_node = "Idle"
graph_offset = Vector2( -313, -8 )

[sub_resource type="AnimationNodeTimeScale" id=40]

[sub_resource type="AnimationNodeBlendTree" id=41]
graph_offset = Vector2( -541.712, -15.1934 )
nodes/StateMachine/node = SubResource( 39 )
nodes/StateMachine/position = Vector2( -386.945, 101.961 )
nodes/TimeScale/node = SubResource( 40 )
nodes/TimeScale/position = Vector2( -20, 120 )
nodes/output/position = Vector2( 380, 100 )
node_connections = [ "TimeScale", 0, "StateMachine", "output", 0, "TimeScale" ]

[sub_resource type="AnimationNodeStateMachinePlayback" id=42]

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 5, 5 )

[sub_resource type="CapsuleShape2D" id=25]
radius = 5.0
height = 5.0

[sub_resource type="RectangleShape2D" id=26]
extents = Vector2( 17.5, 27.5 )

[node name="ChildPlayer" type="KinematicBody2D" groups=["Player"]]
scale = Vector2( 0.4, 0.4 )
collision_layer = 3
collision_mask = 0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
offset = Vector2( 0, -19 )
hframes = 44
frame = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/IdleDown = SubResource( 1 )
anims/IdleLeft = SubResource( 2 )
anims/IdleRight = SubResource( 3 )
anims/IdleUp = SubResource( 4 )
anims/RESET = SubResource( 5 )
anims/WalkDown = SubResource( 6 )
anims/WalkLeft = SubResource( 7 )
anims/WalkRight = SubResource( 8 )
anims/WalkUp = SubResource( 9 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 41 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/StateMachine/playback = SubResource( 42 )
parameters/StateMachine/Idle/blend_position = Vector2( -0.691108, 0.190751 )
parameters/StateMachine/Walk/blend_position = Vector2( -0.00312012, 0.133526 )
parameters/TimeScale/scale = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -7.45058e-08, -5 )
shape = SubResource( 24 )

[node name="HealthTimer" type="Timer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HealthUI" parent="CanvasLayer" instance=ExtResource( 3 )]

[node name="HeartUIStage3" parent="CanvasLayer/HealthUI" index="0"]
visible = true

[node name="SoftCollision" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( 0, -19 )

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( 0, 10 )
shape = SubResource( 25 )

[node name="DialogueInteractionArea" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, -19 )

[node name="CollisionShape2D" parent="DialogueInteractionArea" index="0"]
position = Vector2( 5.96046e-07, -1 )
scale = Vector2( 0.999999, 0.999999 )
shape = SubResource( 26 )

[node name="DialogueLayer" parent="." instance=ExtResource( 6 )]

[node name="InteractionButton" parent="." instance=ExtResource( 7 )]

[node name="FootstepAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -25.0
bus = "SoundEffects"

[connection signal="timeout" from="HealthTimer" to="." method="_on_HealthTimer_timeout"]

[editable path="CanvasLayer/HealthUI"]
[editable path="SoftCollision"]
[editable path="DialogueInteractionArea"]
